--- a/config.gradle
+++ b/config.gradle
@@ -1,14 +1,14 @@
 ext {
     android = [
-            compileSdkVersion: 26,
+            compileSdkVersion: 28,
             minSdkVersion    : 21,
-            targetSdkVersion : 26,
+            targetSdkVersion : 28,
             versionCode      : 1,
             versionName      : "1.0",
     ]
 
     version = [
-            supportLibraryVersion: '28.0.0',
+            supportLibraryVersion: '26.0.0',
             room                 : "2.2.5",
             viewmodel            : "2.2.0",
             extensions           : "2.2.0",
@@ -17,19 +17,10 @@ ext {
             glide                : "4.9.0",
             swiperefresh         : "1.1.0",
             circleimage          : "3.0.1",
-            material             : "1.1.0",
-            constraintlayout     : "1.1.3",
     ]
 
     dependencies = [
-            //material
-            material                : "com.google.android.material:material:${version["material"]}",
-            //constraintlayout
-            constraintlayout        : "androidx.constraintlayout:constraintlayout:${version["constraintlayout"]}",
-            //appcomtV7
-            appcomtV7               : "com.android.support:appcompat-v7:${version["supportLibraryVersion"]}",
-            //recycleView
-            recycleView             : "com.android.support:recyclerview-v7:${version["supportLibraryVersion"]}",
+            appcompatV7               : "com.android.support:appcompat-v7:${version["supportLibraryVersion"]}",
             //viewModel
             //room
             room                    : "androidx.room:room-runtime:${version["room"]}",
